--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{% static 'style.css' %}">
         <title>Fotoblog</title>
     </head>
     <body>
         <div class="sidebar">
+            <h1>FotoBlog</h1>
             {% if user.is_authenticated %}
                 <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
             {% endif %}
