--- a/blog/templates/blog/photo_upload.html
+++ b/blog/templates/blog/photo_upload.html
@@ -1,13 +1,12 @@
-{% load cloudinary %}
-{% load url from future %}
 {% extends 'base.html' %}
+{% load cloudinary %}     
 
 {% block content %}
 <h2>Télécharger une photo</h2>
 <form method="post" enctype="multipart/form-data">
-    {{ form.as_p }}
     {% csrf_token %}
-    <button type="submit" >Publier</button>
+    {{ form.as_p }} 
+    <button type="submit" value="upload">Publier</button>
 </form>
 
 {% endblock content %}
