--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,15 @@
         <div class="sidebar">
             <h1>FotoBlog</h1>
             {% if user.is_authenticated %}
+                <p>Salut, {{ user }} !</p>
+                {% if user.profile_photo %}
+                    <img class="avatar" src="{{ user.profile_photo.url }}">
+                {% else %}
+                    <img class="avatar" src="{% static 'images/default_profile.png'%}">
+                {% endif %}
+                <p><a href="{% url 'blog_create' %}">Créer un post</a></p>
+                <p><a href="{% url 'photo_upload' %}">Télécharger une photo</a></p>
+                <p><a href="{% url 'upload_profile_photo' %}">Changer la photo de profil</a></p>
                 <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
             {% endif %}
         </div>
