blog post et affichage sur la homepage et detail view

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -9,5 +9,16 @@
         </div>
         {% endfor %}
     </div>
-
+    ...
+    <h2>Blog</h2>
+    <div class="grid-container">
+        {% for blog in blogs %}
+            <div class="post">
+                <a href="{% url 'blog_detail' blog.id %}">
+                    <h4>Billet : {{ blog.title }}</h4>
+                    <img src="{{ blog.photo.image.url }}">
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock content %}
