--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h2>{{ blog.title }}</h2>
+    <p><a href="{% url 'edit_blog' blog.id %}">Modifier le billet</a></p>
     <img class="blog-view" src="{{ blog.photo.image.url }}">
     <p class="author">[{{ blog.contributors.first }}]</p>
     <p>{{ blog.photo.caption }}</p>
