--- a/blog/templates/blog/partials/blog_snippet.html
+++ b/blog/templates/blog/partials/blog_snippet.html
@@ -2,7 +2,7 @@
 <div class="post">
     <a href="{% url 'blog_detail' instance.id %}">
         <h4>Post : {{ blog.title }}</h4>
-        <img src="{{ blog.photo.image.url }}">
+        <img src="{{ blog.photo.image.url }}" width="450px" height="300">
         <p><strong>Écrit par {{ blog.contributors.all|join:", " }}</strong></p>
         <p>{{ blog.date_created|get_posted_at_display }}</p>
     </a>
