--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>{{ message }}</p>
+<div class="démo">
+    <p>Ceci est une démo</p>
+    <p>Vous pouvez vous connecter avec les identifiants suivants:</p>
+    <p>Nom d'utilisateur: Démo</p>
+    <p>Mot de passe: Démoblog1</p>
+</div>
 <form method="post">
     {{ form.as_p }}
     {% csrf_token %}
     <button type="submit">Se connecter</button>
 </form>
+
 
 <p>Pas encore membre? <a href="{% url 'signup' %}">Inscrivez-vous maintenant!</a></p>
 
