correction taille avatar

--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="démo">
-    <p>Ceci est une démo</p>
+    <p>Ceci est une démo,</p>
     <p>Vous pouvez vous connecter avec les identifiants suivants:</p>
     <p>Nom d'utilisateur: Démo</p>
     <p>Mot de passe: Démoblog1</p>
