correction taille texte

--- a/Fotoblog/static/style.css
+++ b/Fotoblog/static/style.css
@@ -25,6 +25,8 @@ a:hover {
     /* padding-top: 15px; */
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 16px;
+    line-height: 10px;
 }
 
 /* The navigation menu links */
