--- a/Fotoblog/static/style.css
+++ b/Fotoblog/static/style.css
@@ -79,6 +79,12 @@ a:hover {
     /* width: 200px;
     height: 150px; */
     border-radius: 5px;
+    box-shadow: 0 0 80px -10px black;
+
+}
+
+.post img {
+    box-shadow: 0 0 80px -10px rgba(40, 40, 40, 0.4);    
 }
 
 .blog-view {
