--- a/blog/templates/blog/partials/photo_snippet.html
+++ b/blog/templates/blog/partials/photo_snippet.html
@@ -1,7 +1,11 @@
 {% load blog_extras %}
-<div class="post">
-    <p>{{ photo.caption }}</p>
-    <img class="photo" src="{{ photo.image.url }}" width="450px" height="300">
-    <p><strong>Prise par {% get_poster_display photo.uploader %}</strong></p>
-    <p>{{ photo.date_created|get_posted_at_display }}</p>
+<div class="col">
+    <div class="card shadow-sm">
+        <img src="{{ photo.image.url }}" width="100%" height="225">
+        <div class="card-body">
+            <h3 class="text-center">{{ photo.caption }}</h3>
+            <p class="text-center"><strong>Prise par {% get_poster_display photo.uploader %}</strong></p>
+            <p class="text-center">{{ photo.date_created|get_posted_at_display }}</p>           
+        </div>
+    </div>
 </div>
