--- a/Fotoblog/static/style.css
+++ b/Fotoblog/static/style.css
@@ -7,11 +7,6 @@ a {
     color: inherit;
 }
 
-.text-navbar > h2 {
-    /* padding-left: 0; */
-    /* margin-left: 0; */
-}
-
 a:hover {
     text-decoration: underline dotted;
 }
@@ -121,7 +116,8 @@ a:hover {
 }
 
 .pagination {
-    text-align: center;    
+    text-align: center;
+    color: black; 
 }
 
 .pagination span {
