--- a/blog/templates/blog/partials/blog_snippet.html
+++ b/blog/templates/blog/partials/blog_snippet.html
@@ -3,7 +3,7 @@
 <a href="{% url 'blog_detail' instance.id %}" class="link-dark">
     <div class="col">
         <div class="card shadow-sm">
-            <img src="{{ blog.photo.image.url }}" width="100%" height="225">        
+            <img class="rounded-top" src="{{ blog.photo.image.url }}" width="100%" height="225">        
             <div class="card-body">
                 <h3 class="text-center">{{ blog.title }}</h3>
                 <p class="text-center"><strong>Écrit par {{ blog.contributors.all|join:", " }}</strong></p>
