--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -16,7 +16,7 @@
     {% endfor %}
 </div>
 <div class="pagination">
-    <span>
+    <span class="text-center">
             {% if page_obj.has_previous %}
                 <a href="?page=1"><< Première </a> 
                 <a href="?page={{ page_obj.previous_page_number }}">< Précédente </a> 
