--- a/Fotoblog/static/style.css
+++ b/Fotoblog/static/style.css
@@ -116,7 +116,10 @@ a:hover {
 }
 
 .pagination {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: black; 
 }
 
