--- a/authentication/templates/authentication/password_change_form.html
+++ b/authentication/templates/authentication/password_change_form.html
@@ -3,7 +3,7 @@
 <form method="post">
     {{ form.as_p }}
     {% csrf_token %}
-    <button type="submit">Changer le mot de mot</button>
+    <button type="submit">Changer le mot de passe</button>
 </form>
 
 {% endblock content %}
