--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
 <h2>Inscription</h2>
-{% if form.errors %}
-    {{ form.errors }}
-{% endif %}
-<form method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button type="submit"> S'incrire</button>
-</form>
+<main class="form-signin w-100 m-auto">
+    {% if form.errors %}
+        {{ form.errors }}
+    {% endif %}
+    <form method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button type="submit"> S'incrire</button>
+    </form>
+</main>
 
 {% endblock content %}
