--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -9,7 +9,7 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit"> S'incrire</button>
+        <button class="w-100 btn btn-lg btn-dark" type="submit"> S'incrire</button>
     </form>
 </main>
 
