--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Inscription</h2>
-<main class="form-signin w-100 m-auto">
-    {% if form.errors %}
-        {{ form.errors }}
-    {% endif %}
-    <form method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <button class="w-100 btn btn-lg btn-dark" type="submit"> S'incrire</button>
-    </form>
-</main>
+<div class="main">
+    <h2>Inscription</h2>
+    <main class="form-signin w-100 m-auto">
+        {% if form.errors %}
+            {{ form.errors }}
+        {% endif %}
+        <form method="post">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <button class="w-100 btn btn-lg btn-secondary" type="submit"> S'incrire</button>
+        </form>
+    </main>
+</div>
 
 {% endblock content %}
