--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="text-center">
+<div class="text-center sign-up-form">
     <h2>Inscription</h2>
     <main class="form-signin w-100 m-auto">
         {% if form.errors %}
