--- a/authentication/templates/authentication/password_change_form.html
+++ b/authentication/templates/authentication/password_change_form.html
@@ -1,9 +1,13 @@
 {% block content %}
 
-<form method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button type="submit">Changer le mot de passe</button>
-</form>
+<div class="text-center sign-form shadow p-4 mb-5 bg-body rounded">
+    <main class="form-signin w-100 m-auto">
+        <form method="post">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <button class="w-100 btn btn-lg btn-secondary" type="submit">Changer le mot de passe</button>
+        </form>
+    </main>
+</div>
 
 {% endblock content %}
