--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="text-center sign-up-form shadow p-4 mb-5 bg-body rounded">
+<div class="text-center sign-form shadow p-4 mb-5 bg-body rounded">
     <h2>Inscription</h2>
+    <br>
     <main class="form-signin w-100 m-auto">
         {% if form.errors %}
             {{ form.errors }}
