--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -12,7 +12,7 @@
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <button type="submit">Se connecter</button>
+            <button class="w-100 btn btn-lg btn-secondary" type="submit">Se connecter</button>
         </form>
     </main>
 
