--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<br>
 <div class="text-center sign-form shadow p-4 mb-5 bg-body rounded">
     <div class="démo">
+        <h2>Connectez vous</h2>
+        <br>
         <p>Ceci est une démo,</p>
         <p>Vous pouvez vous connecter avec les identifiants suivants:</p>
         <p>Nom d'utilisateur: Démo</p>
